--- a/css/style.scss
+++ b/css/style.scss
@@ -41,3 +41,14 @@
         }
     }
 }
+
+.shop { 
+    margin: 10px;
+    h1 {
+        font-family: 'Work Sans', sans-serif;
+        margin: 10px; 
+    }
+    img {
+        height: 175px;
+    }
+}
