--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 * {
     margin: 0px;
+    
 }
 
 .header {
@@ -52,4 +53,8 @@
     img {
         height: 175px;
     }
+}
+
+.stats {
+    font-family: 'Work Sans', sans-serif;
 }
