--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,18 @@
 
 .shop {
   margin: 10px;
+  font-family: 'Work Sans', sans-serif;
 }
 
 .shop h1 {
-  font-family: 'Work Sans', sans-serif;
   margin: 10px;
 }
 
 .shop img {
   height: 175px;
+}
+
+.stats {
+  font-family: 'Work Sans', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
